crates/output/tests/snapshots/reporter_snapshots__html_pass.snap
---
source: crates/output/tests/reporter_snapshots.rs
expression: html
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><title>mcp-loadtest run 01HXYTESTPASS00000000000000</title><style>body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;margin:0;padding:24px 32px;color:#1f2937;background:#f8fafc;line-height:1.45;}.wrap{max-width:1100px;margin:0 auto;}header{border-bottom:1px solid #e2e8f0;padding-bottom:16px;margin-bottom:24px;}h1{font-size:22px;margin:0 0 6px;color:#0f172a;}h2{font-size:16px;margin:32px 0 12px;color:#334155;border-bottom:1px solid #e2e8f0;padding-bottom:4px;}.meta{font-size:13px;color:#64748b;}.meta code{background:#f1f5f9;padding:1px 6px;border-radius:3px;font-size:12px;}.badge{display:inline-block;padding:3px 10px;border-radius:3px;font-weight:600;font-size:12px;text-transform:uppercase;}.badge.pass{background:#dcfce7;color:#166534;}.badge.fail{background:#fee2e2;color:#991b1b;}table{border-collapse:collapse;width:100%;font-size:13px;margin-top:8px;}th,td{text-align:left;padding:8px 12px;border-bottom:1px solid #e2e8f0;}th{background:#f1f5f9;color:#334155;font-weight:600;}td.num,th.num{text-align:right;font-family:ui-monospace,Menlo,Consolas,monospace;}tr.violation td{background:#fef2f2;color:#991b1b;}.chart{background:#fff;border:1px solid #e2e8f0;border-radius:4px;padding:12px;}.chart svg{display:block;width:100%;height:auto;}footer{margin-top:48px;padding-top:16px;border-top:1px solid #e2e8f0;color:#94a3b8;font-size:12px;}.mono{font-family:ui-monospace,Menlo,Consolas,monospace;}</style></head><body><div class="wrap"><header><h1>mcp-loadtest run <span class="mono">01HXYTESTPASS00000000000000</span></h1><div class="meta"><span class="badge pass">Pass</span> &nbsp;<strong>Scenario:</strong> sustained &nbsp;<strong>Server:</strong> <code>python -m vibe_trading_mcp</code> &nbsp;<strong>Started:</strong> 2026-05-10T07:30:00Z</div></header><h2>Summary</h2><table><thead><tr><th>p50</th><th>p95</th><th>p99</th><th>p999</th><th class="num">req/s</th><th class="num">total</th><th class="num">errors</th><th class="num">deadlocks</th></tr></thead><tbody><tr><td class="num">12.3ms</td><td class="num">45.6ms</td><td class="num">89.0ms</td><td class="num">120.0ms</td><td class="num">205.75</td><td class="num">12,345</td><td class="num">0</td><td class="num">0</td></tr></tbody></table><h2>Latency distribution</h2><div class="chart"><svg viewBox="0 0 600 220" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="latency histogram"><line x1="40" y1="8" x2="40" y2="192" stroke="#cbd5e1" /><line x1="40" y1="192" x2="592" y2="192" stroke="#cbd5e1" /><rect x="41.0" y="171.1" width="25.6" height="20.9" fill="#3b82f6"/><rect x="68.6" y="165.4" width="25.6" height="26.6" fill="#3b82f6"/><rect x="96.2" y="158.2" width="25.6" height="33.8" fill="#3b82f6"/><rect x="123.8" y="148.9" width="25.6" height="43.1" fill="#3b82f6"/><rect x="151.4" y="137.1" width="25.6" height="54.9" fill="#3b82f6"/><rect x="179.0" y="122.2" width="25.6" height="69.8" fill="#3b82f6"/><rect x="206.6" y="103.1" width="25.6" height="88.9" fill="#3b82f6"/><rect x="234.2" y="78.8" width="25.6" height="113.2" fill="#3b82f6"/><rect x="261.8" y="47.9" width="25.6" height="144.1" fill="#3b82f6"/><rect x="289.4" y="58.4" width="25.6" height="133.6" fill="#3b82f6"/><rect x="317.0" y="121.9" width="25.6" height="70.1" fill="#3b82f6"/><rect x="344.6" y="102.8" width="25.6" height="89.2" fill="#3b82f6"/><rect x="372.2" y="78.5" width="25.6" height="113.5" fill="#3b82f6"/><rect x="399.8" y="47.5" width="25.6" height="144.5" fill="#3b82f6"/><rect x="427.4" y="8.0" width="25.6" height="184.0" fill="#3b82f6"/><rect x="455.0" y="162.8" width="25.6" height="29.2" fill="#3b82f6"/><rect x="482.6" y="171.7" width="25.6" height="20.3" fill="#3b82f6"/><rect x="510.2" y="169.3" width="25.6" height="22.7" fill="#3b82f6"/><rect x="537.8" y="181.6" width="25.6" height="10.4" fill="#3b82f6"/><rect x="565.4" y="189.7" width="25.6" height="2.3" fill="#3b82f6"/><text x="53.8" y="206" font-size="10" fill="#64748b" text-anchor="middle">1.2ms</text><text x="219.4" y="206" font-size="10" fill="#64748b" text-anchor="middle">5.1ms</text><text x="412.6" y="206" font-size="10" fill="#64748b" text-anchor="middle">27.7ms</text><text x="578.2" y="206" font-size="10" fill="#64748b" text-anchor="middle">117.8ms</text><text x="4" y="14" font-size="10" fill="#64748b">fraction</text></svg></div><p class="meta" style="margin-top:8px;">Buckets log-spaced over the observed range; bar heights interpolated from min / p50 / p95 / p99 / p999 / max anchors.</p><footer>Generated by mcp-loadtest v0.0.1 · run started 2026-05-10T07:30:00Z</footer></div></body></html>
