crates/output/tests/snapshots/reporter_snapshots__json_fail.snap
---
source: crates/mcp-loadtest/tests/reporter_snapshots.rs
expression: j
---
{
  "run_id": "01HXYTESTFAIL00000000000000",
  "started_at": "2026-05-10T07:30:00Z",
  "duration_secs": 60.0,
  "scenario": {
    "name": "sustained"
  },
  "server": {
    "command": "python",
    "args": [
      "-m",
      "vibe_trading_mcp"
    ],
    "pid": 4242,
    "protocol_version": "2025-03-26"
  },
  "latency_ms": {
    "p50": 12.3,
    "p95": 45.6,
    "p99": 123.39999999999999,
    "p999": 456.7,
    "min": 1.2,
    "max": 999.9,
    "mean": 23.400000000000002,
    "count": 12345
  },
  "throughput": {
    "total_requests": 12345,
    "successful_requests": 12300,
    "requests_per_sec": 205.75
  },
  "errors": {
    "total": 45,
    "by_category": {
      "Hang": 0,
      "Timeout": 5,
      "ServerError": 30,
      "ProtocolError": 10,
      "Crash": 0,
      "Malformed": 0,
      "Disconnected": 0,
      "Cancelled": 0
    }
  },
  "process": {
    "peak_rss_mb": 156.3,
    "final_rss_mb": 142.1,
    "avg_cpu_pct": 23.4
  },
  "deadlock_count": 0,
  "hang_count": 0,
  "trace_path": "./trace.jsonl",
  "threshold_violations": [
    {
      "metric": "p99_latency",
      "expected": "<= 100ms",
      "actual": "123.4ms"
    }
  ],
  "passed": false
}
