crates/output/tests/snapshots/reporter_snapshots__markdown_fail.snap
---
source: crates/output/tests/reporter_snapshots.rs
expression: md
---
# Run 01HXYTESTFAIL00000000000000

**Status:** ❌ FAIL (2 teardown failures, 10 protocol/malformed outcomes, 5 terminal session outcomes, 1 threshold violation)
**Server:** `python -m vibe_trading_mcp`
**Scenario:** sustained
**Started:** 2026-05-10T07:30:00Z

## Summary
- Total requests: 12,345
- Throughput: 205.75 req/s
- Error rate: 0.36%
- Deadlocks: 0  Hangs: 0
- Teardown failures: 2

## Latency
| p50 | p95 | p99 | p999 | max |
|---|---|---|---|---|
| 12.3ms | 45.6ms | **123.4ms** ❌ | 456.7ms | 999.9ms |

## Errors
| Category | Count |
|---|---|
| Timeout | 5 |
| ServerError | 30 |
| ProtocolError | 10 |

## Process
Peak RSS: 156.3 MB · Final RSS: 142.1 MB · Avg CPU: 23.4%

## Threshold violations
- ❌ **p99_latency**: expected <= 100ms, got 123.4ms

## Trace
Full trace: `./trace.jsonl` (12345 events)
