crates/output/tests/snapshots/reporter_snapshots__markdown_pass.snap
---
source: crates/mcp-loadtest/tests/reporter_snapshots.rs
expression: md
---
# Run 01HXYTESTPASS00000000000000

**Status:** ✅ PASS
**Server:** `python -m vibe_trading_mcp`
**Scenario:** sustained
**Started:** 2026-05-10T07:30:00Z

## Summary
- Total requests: 12,345
- Throughput: 205.75 req/s
- Error rate: 0.00%
- Deadlocks: 0  Hangs: 0

## Latency
| p50 | p95 | p99 | p999 | max |
|---|---|---|---|---|
| 12.3ms | 45.6ms | 89.0ms | 120.0ms | 150.0ms |

## Errors
_No errors recorded._

## Process
Peak RSS: 156.3 MB · Final RSS: 142.1 MB · Avg CPU: 23.4%

## Threshold violations
_None._

## Trace
Full trace: `./trace.jsonl` (12345 events)
